# WalletWave

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  test.txt
CLI/: banner.py  menu.py  plugin_manager.py
WalletWave/: config.py  config.yaml  main.py
WalletWave/plugins/: top_wallets.py
WalletWave/plugins/utils/: plugin_interface.py
WalletWave/repositories/: gmgn_repo.py
WalletWave/services/: plugin_manager.py
WalletWave/services/strategies/: strategy_interface.py  top_wallet_strategy.py
WalletWave/utils/: file_utils.py  logging_utils.py  strategy_utils.py
WalletWave/utils/gmgn/: client.py
WalletWave/utils/gmgn_client/: client.py
WalletWave/utils/gmgn_client/schemas/: __init__.py  token_info.py  top_holders.py  trending_wallets.py  wallet_info.py
WalletWave/utils/gmgn_client/utils/: agent_mapper.py  dataclass_transformer.py
data/: wallet_list_20250129_151218.csv  wallet_list_20250129_151407.csv  wallet_list_20250131_192156.csv  wallet_list_20250131_193032.csv
src/CLI/: banner.py  menu.py  plugin_manager.py
src/WalletWave/: config.py  config.yaml  main.py
src/WalletWave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/WalletWave/models/: token_info.py  top_holders.py  wallets.py
src/WalletWave/plugins/: top_wallets.py  wallet_scanner.py
src/WalletWave/repositories/: gmgn_repo.py
src/WalletWave/services/gmgn_client/: client.py
src/WalletWave/utils/: config_validators.py  file_utils.py  formatting_utils.py  logging_utils.py
(+18 files in other folders)
