[project]
name='WalletWave'
version='2.1.2'
description='CLI program to analyze SOLANA wallets for copy trading'
authors = [
    {name = "LetsStartWithPurple", email = "LetsStartWithPurple@gmail.com"},
    {name = "viksant", email = ""}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies=[
    "typing_extensions",
    "tls_client",
    "requests",
    "PyYAML",
    "fake-useragent",
    "dacite",
    "colorama",
    "pydantic"
]
keywords = ['crypto', 'wallet', 'scanner', 'solana', 'copy trading']
requires-python = ">= 3.8"

[project.scripts]
walletwave = "WalletWave.main:main"

[project.urls]
Homepage = "https://github.com/LetsStartWithPurple/WalletWave"
Repository = 'https://github.com/LetsStartWithPurple/WalletWave.git'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"WalletWave" = ["config.yaml"]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"
